# flowgrid_old

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  FlowGridConfig.h.in  README.md  flow-grid.jucer  flowgrid.jucer  sound-machine.jucer
Builds/CLion/: CMakeLists.txt  Debug-Info-App.plist  Release-Info-App.plist
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h
Source/: AppState.cpp  AppState.h  ApplicationKeyListener.h  ApplicationPropertiesAndCommandManager.h  ArrangeView.h  AudioGraphBuilder.h  AudioSettings.cpp  AudioSettings.h  ConnectionHelper.h  DeviceChangeMonitor.h  DeviceManagerUtilities.h  Identifiers.h  Macros.h  Main.cpp  MainComponent.cpp  MainContentComponent.cpp  MainParameters.cpp  MainParameters.h  MidiControlHandler.h  MidiParameterTranslator.cpp  MidiParameterTranslator.h  Parameter.h  PluginManager.cpp  PluginManager.h  ProcessorGraph.cpp  ProcessorGraph.h  Project.h  Push2Animator.cpp  Push2Animator.h  Push2Component.h  Push2Demo.cpp  Push2Demo.h  Result.cpp  Result.h  StatefulAudioProcessorContainer.cpp  StatefulAudioProcessorContainer.h  Utilities.h  ValueTreeEditor.h  ValueTreeItems.h  ValueTreeObjectList.h  (+2 more)
Source/actions/: CreateConnectionAction.cpp  CreateConnectionAction.h  CreateOrDeleteConnectionsAction.cpp  CreateOrDeleteConnectionsAction.h  CreateProcessorAction.cpp  CreateProcessorAction.h  CreateTrackAction.cpp  CreateTrackAction.h  DefaultConnectProcessorAction.cpp  DefaultConnectProcessorAction.h  DeleteConnectionAction.cpp  DeleteConnectionAction.h  DeleteProcessorAction.cpp  DeleteProcessorAction.h  DeleteSelectedItemsAction.cpp  DeleteSelectedItemsAction.h  DeleteTrackAction.cpp  DeleteTrackAction.h  DisconnectProcessorAction.cpp  DisconnectProcessorAction.h  DuplicateProcessorAction.h  DuplicateSelectedItemsAction.h  DuplicateTrackAction.h  FocusAction.h  InsertAction.cpp  InsertAction.h  InsertProcessorAction.cpp  InsertProcessorAction.h  MoveSelectedItemsAction.cpp  MoveSelectedItemsAction.h  ResetDefaultExternalInputConnectionsAction.cpp  ResetDefaultExternalInputConnectionsAction.h  SelectAction.cpp  SelectAction.h  SelectProcessorSlotAction.cpp  SelectProcessorSlotAction.h  SelectRectangleAction.cpp  SelectRectangleAction.h  SelectTrackAction.cpp  SelectTrackAction.h  (+6 more)
Source/audio_processors/: DefaultAudioProcessor.h  MainProcessor.cpp  MainProcessor.h
Source/audio_sources/: Instrument.h  ToneSourceWithParameters.cpp  ToneSourceWithParameters.h
Source/drow/: Components.h  Identifiers.h  SelectionPanel.h  ValueTreeItems.h  drow_Utilities.h  drow_ValueTreeObjectList.h
Source/intruments/: Instrument.h  InstrumentSource.h  SineBank.cpp  SineBank.h
Source/libusb/: config.h  libusb_platform_wrapper.c
Source/midi/: MidiCommunicator.cpp  MidiCommunicator.h
Source/processors/: Arpeggiator.h  BalanceAndGainProcessor.h  BalanceProcessor.h  DefaultAudioProcessor.cpp  DefaultAudioProcessor.h  GainProcessor.h  InternalPluginFormat.cpp  InternalPluginFormat.h  InternalProcessorIncludes.h  MidiInputProcessor.h  MidiKeyboardProcessor.h  MidiOutputProcessor.h  MixerChannelProcessor.h  ParameterTypesTestProcessor.h  ProcessorIds.h  ProcessorManager.h  SineBank.h  SineSynth.h  StatefulAudioProcessor.h  StatefulAudioProcessorWrapper.cpp  StatefulAudioProcessorWrapper.h  TrackInputProcessor.h  TrackOutputProcessor.h
Source/push2/: JuceToPush2DisplayBridge.cpp  JuceToPush2DisplayBridge.h  Push2-Bitmap.h  Push2-Display.h  Push2-Usb-Communicator.cpp  Push2-UsbCommunicator.h  Push2Display.h  Push2DisplayBridge.cpp  Push2DisplayBridge.h  Push2MidiCommunicator.cpp  Push2MidiCommunicator.h  Push2MidiDevice.h  Push2UsbCommunicator.cpp  Push2UsbCommunicator.h
Source/state/: ConnectionState.cpp  ConnectionState.h  ConnectionType.h  ConnectionsState.cpp  ConnectionsState.h  CopiedState.cpp  CopiedState.h  CopiedTracks.cpp  CopiedTracks.h  Identifiers.h  InputChannelsState.cpp  InputChannelsState.h  InputState.cpp  InputState.h  InputStateManager.h  OutputChannelsState.cpp  OutputChannelsState.h  OutputState.cpp  OutputState.h  OutputStateManager.h  Project.cpp  Project.h  State.h  Stateful.cpp  Stateful.h  TrackState.cpp  TrackState.h  TracksState.cpp  TracksState.h  TracksStateManager.h  ViewState.cpp  ViewState.h
Source/state_managers/: ConnectionsStateManager.h  InputStateManager.h  OutputStateManager.h  StateManager.h  TracksStateManager.h  ViewStateManager.h
Source/usb/: UsbCommunicator.cpp  UsbCommunicator.h
Source/view/: ArrangeView.h  BasicWindow.h  ColourChangeButton.h  CustomColourIds.h  GraphEditorPanel.cpp  GraphEditorPanel.h  InstrumentViewComponent.cpp  InstrumentViewComponent.h  PluginWindow.cpp  PluginWindow.h  Push2Component.h  Push2ProcessorViewComponent.cpp  Push2ProcessorViewComponent.h  Push2ViewComponent.cpp  Push2ViewComponent.h  SelectionEditor.cpp  SelectionEditor.h  SelectionPanel.h  UiColours.h  ValueTreeEditor.h
docs/: ideas.md  smoke_tests.md
docs/sonic-visualizer/: sonic_visualizer.md
src/: ApplicationPropertiesAndCommandManager.h  DeviceManagerUtilities.h  Main.cpp  PluginManager.cpp  PluginManager.h  ProcessorGraph.cpp  ProcessorGraph.h  ValueTreeObjectList.h  config.h
src/action/: CreateConnection.cpp  CreateConnection.h  CreateOrDeleteConnections.cpp  CreateOrDeleteConnections.h  CreateOrDeleteConnectionsAction.cpp  CreateOrDeleteConnectionsAction.h  CreateProcessor.cpp  CreateProcessor.h  CreateTrack.cpp  CreateTrack.h  CreateTrackAction.h  DefaultConnectProcessor.cpp  DefaultConnectProcessor.h  DefaultConnectProcessorAction.h  DeleteConnection.cpp  DeleteConnection.h  DeleteConnectionAction.cpp  DeleteConnectionAction.h  DeleteProcessor.cpp  DeleteProcessor.h  DeleteProcessorAction.cpp  DeleteSelectedItems.cpp  DeleteSelectedItems.h  DeleteTrack.cpp  DeleteTrack.h  DeleteTrackAction.h  DisconnectProcessor.cpp  DisconnectProcessor.h  DisconnectProcessorAction.cpp  DisconnectProcessorAction.h  Insert.cpp  Insert.h  InsertAction.cpp  InsertProcessor.cpp  InsertProcessor.h  InsertProcessorAction.cpp  InsertProcessorAction.h  MoveSelectedItems.cpp  MoveSelectedItems.h  (+26 more)
(+297 files in other folders)
